fix add component

--- a/budget-app/Pages/Components/Records/AddAndUpdateRecord.razor
+++ b/budget-app/Pages/Components/Records/AddAndUpdateRecord.razor
@@ -22,7 +22,7 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <input class="form-control" @bind="Cost" type="number" id="Cost" />
+                        <input class="form-control" @bind="Cost" type="number" id="Cost" min="0" oninput="validity.valid||(value='');"/>
                     </div>
                     <div class="mb-3">
                         <input class="form-control" @bind="Date" type="date" id="Date" />
