--- a/budget-app/Pages/Components/Records/ViewRecords.razor
+++ b/budget-app/Pages/Components/Records/ViewRecords.razor
@@ -36,7 +36,7 @@ else
                 </tr>
                 </thead>
                 <tbody>
-                @foreach (var record in Records)
+                @foreach (var record in Records.OrderBy(r => r.Date).Reverse())
                 {
                     <tr @onclick="() => { OnRecordClick.InvokeAsync(record); }">
                         <td>
@@ -52,7 +52,7 @@ else
                                     @bind="@record.Category"
                                     id="Category"
                                     placeholder="@record.Category"
-                                    onfocusout="@(async () => await UpdateRecord.InvokeAsync(record))" >
+                                    onfocusout="@(async () => await UpdateRecord.InvokeAsync(record))">
                                 @foreach (var category in Enum.GetNames(typeof(RecordCategory)))
                                 {
                                     <option value="@category">@category</option>
