--- a/budget-app/Pages/Spending.razor
+++ b/budget-app/Pages/Spending.razor
@@ -8,7 +8,7 @@
 
     <p>This component demonstrates fetching data from a service.</p>
 
-    <AddAndUpdateRecord ActiveRecord="ActiveRecord" />
+    <CreateRecord ActiveRecord="ActiveRecord" />
     <ViewRecords DeleteRecord="async record => await Context.DeleteRecord(record.Id)"
                  UpdateRecord="async record => await Context.UpdateRecord(record)"
                  OnRecordClick="record => SelectRecord(record.Id)" Records="Records" />
