changed the description on the spending page

--- a/budget-app/Pages/Components/Records/CreateRecord.razor
+++ b/budget-app/Pages/Components/Records/CreateRecord.razor
@@ -29,7 +29,7 @@
                     </div>
                     <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" @onclick="AddRecord">Add</button>
                     <button class="w-100 mb-2 btn btn-lg rounded-3 btn-light" @onclick="Clear">Clear</button>
-                    <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                    <small class="text-muted">By clicking Add, you add an entry to the list of expenses..</small>
                 </div>
             </div>
         </div>
