--- a/budget-app/Pages/Spending.razor
+++ b/budget-app/Pages/Spending.razor
@@ -6,7 +6,7 @@
 
     <h1>Spending</h1>
 
-    <p>This component demonstrates fetching data from a service.</p>
+    <p>Рere you can add or view a history of your transactions.</p>
 
     <CreateRecord ActiveRecord="ActiveRecord" />
     <ViewRecords DeleteRecord="async record => await Context.DeleteRecord(record.Id)"
